TEN-2769: Fix sticky header z-index hierarchy and remove section header stickiness

--- a/src/app/pages/apps/components/installed-apps/app-total-row/app-total-row.component.scss
+++ b/src/app/pages/apps/components/installed-apps/app-total-row/app-total-row.component.scss
@@ -14,7 +14,7 @@
   position: sticky;
   top: 48px;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 
   @media (max-width: $breakpoint-tablet) {
     grid-template-columns: 45px auto 0 0 0 0 0 0;
